--- a/src/components/UpdateBar/UpdateBar.css
+++ b/src/components/UpdateBar/UpdateBar.css
@@ -4,17 +4,17 @@
 
 .quickUpdates{
 
-    @apply bg-white1 rounded-lg drop-shadow-md flex flex-col overflow-hidden;
+    @apply bg-white1 rounded-lg drop-shadow-md flex flex-col overflow-auto;
 
 }
 
 .update{
-    @apply w-full flex flex-col gap-0.5 items-center justify-start hover:bg-white2 px-4 py-2 hover:drop-shadow transition-all ease-in;
+    @apply w-full flex flex-col gap-0.5 items-center justify-start hover:bg-white2 px-4 py-2 ;
 }
 
 .event{
     @apply flex justify-between px-4 py-2 
-    /* hover:bg-white2  hover:drop-shadow */
+    /* hover:bg-white2  */
     ;
 }
 
